-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.2.0
-
None
CORRECT
http://qt-project.org/doc/qt-5/qtqml-syntax-objectattributes.html#attached-properties-and-attached-signal-handlers
This section describes "attached signal handlers", where the format is
<AttachingType>.on<SignalName>
Example: The Component type has a signal called completed and a corresponding attached signal handler called onCompleted.
WRONG
http://qt-project.org/doc/qt-5/qml-qtqml-component.html
This page has a section called "Attached Signals", and talks about the "onCompleted signal".
This mistake is repeated throughout the Qt documentation!
- is required for
-
QTBUG-35199 Qt 5.3 Documentation Issues (meta bug)
-
- Closed
-
For Gerrit Dashboard: QTBUG-35846 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
80966,2 | Doc: Document signals (not handlers) under \qmlsignal | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
80996,2 | Doc: Document signals (not handlers) under \qmlsignal | stable | qt/qtmultimedia | Status: MERGED | +2 | 0 |
80997,1 | Doc: Document signals (not handlers) under \qmlsignal | stable | qt/qtlocation | Status: MERGED | +2 | 0 |
80998,1 | Doc: Document signals (not handlers) under \qmlsignal | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |
81014,2 | Doc: Fix broken \qmlsignal links | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
81015,2 | Doc: Fix broken \qmlsignal links | stable | qt/qtdoc | Status: MERGED | +2 | 0 |
81350,2 | Doc: Document signals (not handlers) under \qmlattachedsignal | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |