Doc: Qt QML: Document signals (not handlers) under \qmlsignal

Task-number: QTBUG-35846

Change-Id: I989617865a79bfbf1f1ffd3b105598025dde54c5
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>