src/qml/types/qqmltimer.cpp
@@ -302,9 +302,11 @@ void QQmlTimer::componentComplete()
 }
 
 /*!
-    \qmlsignal QtQml::Timer::onTriggered()
+    \qmlsignal QtQml::Timer::triggered()
 
-    This handler is called when the Timer is triggered.
+    This signal is emitted when the Timer times out.
+
+    The corresponding handler is \c onTriggered.
 */
 void QQmlTimer::ticked()
 {
